2004-08-29 Shane Landrum <epicene@pobox.com>

	* Menu.xml
	* MenuDetachFunc.xml
	* MenuItem.xml
	* MenuPositionFunc.xml
	* MenuShell.xml: Docs for menu-related classes.	

2004-08-29 Shane Landrum <epicene@pobox.com>
	
	* en/Gtk/TextSegCheckFunc.xml
	* en/Gtk/TextSegCleanupFunc.xml
	* en/Gtk/TextSegDeleteFunc.xml
	* en/Gtk/TextSegLineChangeFunc.xml
	* en/Gtk/TextSegSplitFunc.xml
	* en/Gtk/TextLineSegment.xml
	* en/Gtk/TextLineSegmentClass.xml: Marked 'do not use',
	pending an answer on #64410.
	
2004-08-29 Shane Landrum <epicene@pobox.com>

	* MarkDeletedArgs.xml
	* MarkSetArgs.xml
	* OrientationChangedArgs.xml
	* SelectionClearEventArgs.xml
	* SetBaseTargetArgs.xml
	* SetFocusArgs.xml
	* StateChangedArgs.xml
	* SwitchPageArgs.xml
	* TextEventArgs.xml: Event data.

2004-08-29 Shane Landrum <epicene@pobox.com>

	* HTML.xml
	* HTMLBeginFlags.xml
	* HTMLClassProperties.xml
	* HTMLCommandType.xml
	* HTMLEditorAPI.xml
	* HTMLEditorEventType.xml
	* HTMLFontStyleShift.xml
	* HTMLParagraphStyle.xml
	* HTMLPrintCallback.xml
	* HTMLStream.xml
	* HTMLStreamCloseFunc.xml
	* HTMLStreamStatus.xml
	* HTMLStreamTypesFunc.xml
	* HTMLStreamWriteFunc.xml: Documented HTML widget and related classes.
	
2004-08-28 Shane Landrum <epicene@pobox.com>

	* en/Gtk/HSV.xml: Added docs for color selector.
	* en/Gtk/ProximityInEventArgs.xml
	* en/Gtk/ProximityOutEventArgs.xml
	* en/Gtk/Widget.xml: Docs for proximity events and other events.
	* en/Gtk/SizeAllocatedArgs.xml
	* en/Gtk/SizeRequestedArgs.xml
	* en/Gtk/Requisition.xml: Docs for widget size requests.
	* en/Gdk/Rectangle.xml: Added docs.
	* en/Gtk/CursorMoveArgs.xml
	* en/Gtk/RemovedArgs.xml
	* en/Gtk/SelectPageArgs.xml
	* en/Gtk/SetBaseArgs.xml
	* en/Gtk/ResponseArgs.xml
	* en/Gtk/StyleSetArgs.xml: Event data.
	* en/Gtk/Settings.xml: Added docs.
	* en/Gtk/Table.xml: Added docs.
	* en/Gtk/ThemeEngine.xml: Added docs.
	* en/Gtk/StockManager.xml: Added docs, flagged some API that needs
	review.
	