@@ -466,9 +466,9 @@ class EntrySample
         <ReturnType>System.Int32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'int'</returns>
-        <remarks>To be added</remarks>
+        <summary>Number of pixels the entry scrolled off the screen to the left.</summary>
+        <returns>A <see cref="T:System.Int32"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="WidthChars">
@@ -702,9 +702,9 @@ class EntrySample
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Fired when the popup handler needs to be filled with data.</summary>
         <remarks>
-          <para>Data pertaining to this event is encapsulated in a <see cref="T:Gtk.PopulatePopupHandler" />.</para>
+          <para>Data pertaining to this event is encapsulated in a <see cref="T:Gtk.PopulatePopupArgs" />.</para>
         </remarks>
       </Docs>
     </Member>
@@ -747,10 +747,10 @@ class EntrySample
         <Parameter Name="position" Type="System.Int32&amp;" RefType="ref" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="new_text">To be added: an object of type 'string'</param>
-        <param name="position">To be added: an object of type 'int&amp;'</param>
-        <remarks>To be added</remarks>
+        <summary>Add text <paramref name="new_text"/> to the entry just before <paramref name="position"/>.</summary>
+        <param name="new_text">A <see cref="System.String"/></param>
+        <param name="position">A <see cref="System.Int32&amp;"/></param>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -761,10 +761,10 @@ class EntrySample
         <Parameter Name="initialText" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="initialText">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'Gtk.Entry'</returns>
-        <remarks>To be added</remarks>
+        <summary>Public constructor.</summary>
+        <param name="initialText">A <see cref="System.String"/></param>
+        <returns>A <see cref="T:Gtk.Entry"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="GetLayoutOffsets">
