@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An object for keys that are independent of keyboard focus--- global hotkeys, which execute <see cref="T:Gtk.KeySnoopFunc"/> functions.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -29,9 +29,9 @@
         <Parameter Name="snooper_handler_id" Type="System.UInt32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Remove a snooper with id <paramref name="snooper_handler_id"/></summary>
         <param name="snooper_handler_id">a <see cref="T:System.UInt32" /></param>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="SnooperInstall">
@@ -44,10 +44,10 @@
         <Parameter Name="snooper" Type="Gtk.KeySnoopFunc" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Install a snooper function.</summary>
         <param name="snooper">a <see cref="T:Gtk.KeySnoopFunc" /></param>
-        <returns>a <see cref="T:System.UInt32" /></returns>
-        <remarks>To be added</remarks>
+        <returns>a <see cref="T:System.UInt32" />, the snooper handler id.</returns>
+        <remarks>Code that uses this method should hold onto the return value, as it's necessary to disable the key.</remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -56,9 +56,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Default constructor.</summary>
         <returns>a <see cref="T:Gtk.Key" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
