@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A function to be invoked by a global hot-key (a <see cref="T:Gtk.Key"/>, regardless of keyboard focus.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
