@@ -644,10 +644,10 @@
         <Parameter Name="str" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Basic constructor.</summary>
         <param name="str">a <see cref="T:System.String" /></param>
         <returns>a <see cref="T:Gtk.Label" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
