@@ -39,9 +39,9 @@
         <ReturnType>Gtk.ScrollType</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.ScrollType'</returns>
-        <remarks>To be added</remarks>
+        <summary>The kind of scrolling that was done in the triggering event.</summary>
+        <returns>A <see cref="T:Gtk.ScrollType"/></returns>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
