@@ -168,8 +168,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Fired when the user moves a slider.</summary>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="ValueChanged">
@@ -194,8 +194,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Fired when the bounds of the range are adjusted.</summary>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -273,9 +273,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Protected constructor.</summary>
         <returns>a <see cref="T:Gtk.Range" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
