@@ -1,5 +1,14 @@
 2004-08-29 Shane Landrum <epicene@pobox.com>
 
+	* Key.xml
+	* KeySnoopFunc.xml: Docs for global hotkeys.
+	* Range.xml
+	* MoveSliderArgs.xml: Docs for number ranges.
+	* Entry.xml
+	* Label.xml: Small texty widgets docs.
+
+2004-08-29 Shane Landrum <epicene@pobox.com>
+
 	* Menu.xml
 	* MenuDetachFunc.xml
 	* MenuItem.xml
